--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkred;
+  background-color: #8b0000;
   color: white;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -20,9 +20,8 @@ header {
 }
 
 nav {
-  background-color: black;
+  background-color: #333;
   padding: 10px;
-  text-align: center;
 }
 
 nav ul {
@@ -33,25 +32,43 @@ nav ul {
 
 nav ul li {
   display: inline;
+  margin-right: 20px;
+}
+
+nav ul li:last-child {
+  margin-right: 0;
 }
 
 nav ul li a {
   color: white;
   text-decoration: none;
-  padding: 5px 10px;
+  font-size: 18px;
 }
 
 nav ul li a:hover {
-  background-color: #333;
+  text-decoration: underline;
 }
 
 section {
   padding: 20px;
 }
 
+section h2 {
+  font-size: 24px;
+}
+
+section ul {
+  list-style: none;
+  padding: 0;
+}
+
+section ul li {
+  margin-bottom: 10px;
+}
+
 footer {
   text-align: center;
-  background-color: black;
+  background-color: #333;
   padding: 10px;
 }
 
