--- a/style.css
+++ b/style.css
@@ -17,53 +17,32 @@ header {
 
 .quote {
   font-size: 18px;
+  text-align: center;
 }
 
-nav {
-  background-color: #333;
-  padding: 10px;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 20px;
-}
-
-nav ul li:last-child {
-  margin-right: 0;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-section {
+#socials {
   padding: 20px;
 }
 
-section h2 {
+#socials h2 {
   font-size: 24px;
+  text-align: center;
 }
 
-section ul {
-  list-style: none;
-  padding: 0;
+.button-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-section ul li {
-  margin-bottom: 10px;
+.social-button {
+  display: inline-block;
+  background-color: #333;
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
 }
 
 footer {
