--- a/styles.css
+++ b/styles.css
@@ -31,29 +31,53 @@ h1 {
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .button:hover {
     background-color: #0056b3;
 }
 
-.page-in-page {
-    display: none;
-}
-
-.page-in-page h3 {
+.contact-button {
+    padding: 5px 10px;
+    background-color: #555;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
     margin-bottom: 10px;
 }
 
-.page-in-page ul {
-    padding: 0;
-    list-style-type: none;
+.contact-button:hover {
+    background-color: #333;
 }
 
-.page-in-page li {
-    margin-bottom: 5px;
+.contact-info {
+    display: none;
+    text-align: center;
+    margin-top: 20px;
 }
 
-.center:hover .page-in-page {
-    display: block;
+.contact-info h3 {
+    margin-bottom: 10px;
+}
+
+.social-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.social-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #555;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.social-button:hover {
+    background-color: #333;
 }
