--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1a1a1a; /* Dark background color */
-    color: white; /* Text color for better readability */
+    background-color: #1a1a1a;
+    color: white;
+    overflow: hidden;
 }
 
 header {
@@ -11,8 +12,8 @@ header {
     background-color: #ff69b4;
     color: white;
     text-align: center;
-    padding: 10em 0; /* Adjust the padding for spacing */
-    overflow: hidden; /* Hide overflowing content due to animation */
+    padding: 10em 0;
+    overflow: hidden;
 }
 
 .header-animation {
@@ -21,17 +22,17 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-    opacity: 0; /* Initially hidden */
-    animation: fadeIn 3s ease-in-out infinite; /* Adjust animation duration and timing */
+    background-image: url('cosmos-nebula-universe-background.jpg');
+    animation: particlesAnimation 20s linear infinite;
+    z-index: -1;
 }
 
-@keyframes fadeIn {
-    0%, 100% {
-        opacity: 0;
+@keyframes particlesAnimation {
+    from {
+        transform: translateY(0%);
     }
-    50% {
-        opacity: 1;
+    to {
+        transform: translateY(-100%);
     }
 }
 
